--- a/index.html
+++ b/index.html
@@ -40,10 +40,10 @@
         </div>
         <div id="navbar" class="navbar-collapse collapse">
           <ul class="nav navbar-nav navbar-right">
-            <li><a href="">Dashboard</a></li>
-            <li><a href="">Settings</a></li>
-            <li><a href="">Profile</a></li>
-            <li><a href="">Help</a></li>
+            <li><a href="">个人中心</a></li>
+            <li><a href="">我要充值</a></li>
+            <li><a href="">我的金币&nbsp;$100</a></li>
+            <li><a href="">退出登录</a></li>
           </ul>
           <form class="navbar-form navbar-right">
             <input type="text" class="form-control" placeholder="Search...">
@@ -56,10 +56,11 @@
       <div class="row">
         <div class="col-sm-3 col-md-2 sidebar">
           <ul class="nav nav-sidebar click-changes">
-            <li class="active"><a href="#">Overview <span class="sr-only">(current)</span></a></li>
-            <li  url = "ces.html"><a href="#" >Reports</a></li>
-            <li url = "login.html"><a href="#" >Analytics</a></li>
-            <li url = "study.html"><a href="#" >Export</a></li>
+            <li class="active" url = "ces.html"><a href="#">义卖物品<span class="sr-only">(current)</span></a></li>
+            <li  url = "register.html"><a href="#" >受苦群众</a></li>
+            <li  url = "register.html"><a href="#" >捐卖物品</a></li>
+            <li url = "login.html"><a href="#" >我的捐卖</a></li>
+            <li url = "study.html"><a href="#" >我的捐赠</a></li>
           </ul>
 
         </div>
